[project]
name = "fedidevs"
version = "2024"
requires-python = ">=3.12"
dependencies = [
  "django",
  "django-dramatiq",
  "django-environ",
  "django-tailwind",
  "django-template-partials",
  "dramatiq[redis, watch]",
  "gunicorn",
  "heroicons[django]",
  "httpx",
  "mastodon.py",
  "psycopg2-binary",
  "schedule",
  "sentry-sdk",
  "setproctitle",
  "whitenoise",
  "django-cotton>=0.9.27",
  "openai>=1.42.0",
  "django-debug-toolbar-template-profiler>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
  "django-browser-reload",
  "django-coverage-plugin",
  "django-debug-toolbar",
  "django-rich",
  "django-tui",
  "djlint",
  "flakytest",
  "mypy",
  "pytest-cov",
  "pytest-django",
  "rich",
  "ruff",
]
[tool.ruff]
line-length = 120
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "A003",
  "ARG002",
  "PLR2004",
  "E501",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT001",
  "FBT002",
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # Ignore assert False
  "B011",
  "S311",
  "S108",
  "RUF012",
  "EM101",
  # May cause conflicts with formatter:
  "ISC001",
  "S101",   # I like asserts
  "S113", # Default timeout is 5s, why are you asking me to override?
]

[tool.ruff.format]
exclude = ["static"]

[tool.djlint]
ignore = "H006,H021"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=. --cov-report term-missing:skip-covered"
python_files = "tests.py"
DJANGO_SETTINGS_MODULE = "fedidevs.settings"

[tool.coverage.run]
plugins = ["django_coverage_plugin"]
omit = [
  ".venv/*",
  "staticfiles/*",
  "manage.py",
  "fedidevs/wsgi.py",
  "fedidevs/asgi.py",
  "theme/*"
]
