[project]
name = "fedidevs"
version = "2024"
requires-python = "~=3.13.0"
dependencies = [
  "django",
  "django-dramatiq",
  "django-environ",
  "django-tailwind",
  "django-template-partials",
  "dramatiq[redis, watch]",
  "gunicorn",
  "heroicons[django]",
  "httpx",
  "mastodon.py",
  "psycopg[binary,pool]",
  "schedule",
  "sentry-sdk",
  "setproctitle",
  "whitenoise",
  "django-cotton>=0.9.27",
  "openai>=1.42.0",
  "django-watchfiles>=0.2.0",
  "django-zeal>=1.3.0",
  "django-csp>4.0b0",
  "model-bakery>=1.19.5",
  "pytest-watcher>=0.4.3",
  "newrelic>=10.7.0",
  "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
  "django-browser-reload",
  "django-coverage-plugin",
  "django-debug-toolbar",
  "django-rich",
  "django-tui",
  "djlint",
  "flakytest",
  "mypy",
  "pre-commit>=4.0.1",
  "pytest-cov",
  "pytest-django",
  "rich",
  "ruff",
]
[tool.ruff]
line-length = 120
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "A003",
  "ARG002",
  "PLR2004",
  "E501",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT001",
  "FBT002",
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # Ignore assert False
  "B011",
  "S311",
  "S108",
  "RUF012",
  "EM101",
  # May cause conflicts with formatter:
  "ISC001",
  "S101",   # I like asserts
  "S113",   # Default timeout is 5s, why are you asking me to override?
]

[tool.ruff.format]
exclude = ["static"]

[tool.djlint]
ignore = "H006,H021"
custom_blocks = "slot,blocktrans,flag,switch,sample"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=. --cov-report term-missing:skip-covered"
python_files = "tests.py"
DJANGO_SETTINGS_MODULE = "fedidevs.settings"

[tool.coverage.run]
plugins = ["django_coverage_plugin"]
omit = [
  ".venv/*",
  "staticfiles/*",
  "manage.py",
  "fedidevs/wsgi.py",
  "fedidevs/asgi.py",
  "theme/*",
]

[tool.pytest-watcher]
now = true
clear = true
runner = "pytest"
runner_args = ["--no-cov", "--ff", "-x"]
patterns = ["*.py", "*.html"]
ignore_patterns = ["node_modules", ".coverage", ".pytest_cache", ".venv"]
